--- a/src/app/private/styles/views/searchResult.less
+++ b/src/app/private/styles/views/searchResult.less
@@ -37,3 +37,20 @@
       width:405px;
     }
 }
+
+.searchPaginationAlign {
+    margin-left: 7%;
+
+    @media only screen and (min-width : 1600px) {
+        margin-left: 5%;
+    }
+
+    @media only screen and (min-width : 1700px) {
+        margin-left: 6%;
+    }
+
+    @media only screen and (min-width : 1824px) {
+        margin-left: 2%;
+    }
+
+}
